smooth scroll and bug fixes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 			h1, h2, h3 {
 				color: #484FFF
 			}
+			html {
+				scroll-behavior : smooth;
+			} 
 			body {
 				background-color: #F2F2F2
 			}
